Fix (#168) - movie list pager issues on mobile
Fixed paddle issues on home page & movie details page - tested with
apple iphone 4/5, ipad 3/4. samsung galaxy, nokia lumia, nexus 4

--- a/MvcWebRole1/Content/styles/mm.pager.css
+++ b/MvcWebRole1/Content/styles/mm.pager.css
@@ -122,7 +122,7 @@
                 .critics-container #critics-pager { margin-top: 60px; width: 70%; }
                 .movie-poster-details #posters-pager, .movie-list #genre-now, .upcoming-movie-list #genre-upcoming, .others-movie-list #genre-other {z-index: 98; }
                 /* Arrow */
-                .left-arrow { width: 25px; height: 25px; position: relative; left: 35px; z-index: 198; float: left; }
+                .left-arrow { width: 25px; height: 25px; position: relative; left: 35px; z-index: 98; float: left; }
                 .right-arrow { width: 25px; height: 25px; position: relative; left: 105%; z-index: 98; }
 
                 #movies-pager .left-arrow { left: -10px; }
@@ -148,10 +148,25 @@
 @media screen and (min-width: 500px) {
     .movie-list .right-arrow,.upcoming-movie-list .right-arrow{ left: 110%; }
 }
+@media screen and (max-width: 401px) {
+   .movie-list ul,.upcoming-movie-list ul { margin-left: 7%;}
+   .movie-list .right-arrow,.upcoming-movie-list .left-arrow{ left: 35px; }
+   #now-pager .right-arrow,.upcoming-movie-list .right-arrow{ left: 102%; }
+   .movie-list #genre-now, .upcoming-movie-list #genre-upcoming, .others-movie-list #genre-other
+   {
+       width: 63%;
+   }
+   .left-arrow { left: 35px; }
+   .right-arrow { left: 130%; }
+   #critics-pager .left-arrow { left: 0px; }
+   #critics-pager .right-arrow { left: 75%; }
+   #genre-now .left-arrow, #genre-upcoming .left-arrow, #genre-other .left-arrow{ left: -5px; }
+   #genre-now .right-arrow, #genre-upcoming .right-arrow, #genre-other .right-arrow{ left: 125%; }
+}
 @media screen and (max-width: 321px) {
    .movie-list ul,.upcoming-movie-list ul { margin-left: 7%;}
-   .movie-list .right-arrow,.upcoming-movie-list .left-arrow{ left: 0px; }
-   .movie-list .right-arrow,.upcoming-movie-list .right-arrow{ left: 115%; }
+   .movie-list .right-arrow,.upcoming-movie-list .left-arrow{ left: 35px; }
+   #now-pager .right-arrow,.upcoming-movie-list .right-arrow{ left: 113%; }
    .movie-list #genre-now, .upcoming-movie-list #genre-upcoming, .others-movie-list #genre-other
    {
        width: 63%;
