--- a/MvcWebRole1/Content/styles/mm.rate.css
+++ b/MvcWebRole1/Content/styles/mm.rate.css
@@ -65,15 +65,20 @@
     width: 200px;
     margin-bottom: 15px;
 }
-@media screen and (max-width: 320px) {
-    .rating-container {
-        width: 100%;    
+@media screen and (max-width: 401px){
+    .rating-container{
+        width: 245px;    
     }
+}
+@media screen and (min-width: 321px) and (max-width: 767px){
     .rating-container .liner{
         font-size: 1.3em;
     }
 }
-@media screen and (min-width: 321px) and (max-width: 767px){
+@media screen and (max-width: 320px) {
+    .rating-container {
+        width: 100%;    
+    }
     .rating-container .liner{
         font-size: 1.3em;
     }
